# OutSpread

./: CMakeLists.txt  MEASUREMENT_PLAN.md  README.md  SPEC.md  TASKS.md
Source/: OutSpreadParameters.cpp  OutSpreadParameters.h  OutSpreadWetEngine.cpp  OutSpreadWetEngine.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  ShellVerifierMain.cpp
build_harness_check/: CMakeCache.txt  __PLUGIN_NAME__.slnx  cmake_install.cmake
build_harness_check/__PLUGIN_NAME___VST3.dir/Release/: __PLUGIN_NAME__.vst3.recipe
build_harness_check/__PLUGIN_NAME___artefacts/JuceLibraryCode/: Info.txt
build_harness_check/__PLUGIN_NAME___vst3_helper.dir/Release/: __PLUGIN_NAME___vst3_helper.exe.recipe
build_harness_check/tools/vst3_harness/: cmake_install.cmake
build_no_harness/: CMakeCache.txt  __PLUGIN_NAME__.slnx  cmake_install.cmake
build_no_harness/__PLUGIN_NAME___VST3.dir/Release/: __PLUGIN_NAME__.vst3.recipe
build_no_harness/__PLUGIN_NAME___artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h  __PLUGIN_NAME___resources.rc
build_no_harness/__PLUGIN_NAME___vst3_helper.dir/Release/: __PLUGIN_NAME___vst3_helper.exe.recipe
scripts/: analyze_reference_captures.py  generate_stimuli.py  run_measurements.py  verify_shell_smoke.py
tests/cases/: README.md  case_manifest.json  example.json
tests/cases/attack/: attack_click_train_scaffold.json
tests/cases/cpu_latency/: cpu_latency_silence_scaffold.json
tests/cases/freeze_infinite/: freeze_infinite_pink_noise_scaffold.json
tests/cases/gravity/: gravity_click_train_scaffold.json
tests/cases/modulation/: modulation_sine_1khz_scaffold.json
tests/cases/predelay/: predelay_click_train_scaffold.json
tests/cases/sample_rate_block_size/: sample_rate_block_size_impulse_scaffold.json
tests/cases/size/: size_log_sweep_scaffold.json
tests/cases/smoke/: smoke_impulse_scaffold.json
tests/cases/tail/: tail_pink_noise_scaffold.json
tests/reference_states/: README.md  blackhole_attack_probe.json  blackhole_cpu_latency_probe.json  blackhole_freeze_infinite_probe.json  blackhole_gravity_probe.json  blackhole_modulation_probe.json  blackhole_predelay_probe.json  blackhole_sample_rate_block_size_probe.json  blackhole_size_probe.json  blackhole_smoke_default.json  blackhole_tail_probe.json  blackhole_tone_eq_probe.json  blackhole_width_probe.json  reference_state_manifest.json
(+87 files in other folders)
